# MSRTool

./: .clang_format  CMakeLists.txt
include/msr_tool/: MSRFiles.h
src/: main.cpp
src/msr_tool/: MSRFiles.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/src/: test_msrfiles.cpp
